testdata/golden/sema/valid/module_multitest/foo/foo.fmt
pragma module::bar; // foo/foo.sg -> bar should be imported as bar

pub fn hello() -> string {
    return "hello";
}
