testdata/golden/sema/invalid/pragma_invalid_position.fmt
// scenario: pragma placed after other items should be rejected
fn first() -> int {
    return 1;
}

pragma directive

fn second() -> int {
    return 2;
}
